feat: add memory webshell support